<resources>
    <string name="app_name">Sabai Sewa</string>
    <string name="api_key">*********************************</string>
    <string name="next">Next</string>
    <string name="introtext">Service at your doorstep.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgrot">Forgot Password!</string>

    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="refercode">Refer Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_1">Home</string>
    <string name="label_2">Bookings</string>
    <string name="search">Search...</string>
    <string name="view_all_services">View All Services</string>
    <string name="select_a_service">Select A Service</string>
    <string name="conti">Continue</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="code">Code</string>
    <string name="timetitle">When would you like your service?</string>
    <string name="address">Address for service</string>
    <string name="change">Change</string>
    <string name="menu1">Register As Partner</string>
    <string name="menu2">My Booking</string>
    <string name="menu3">About</string>
    <string name="menu4">Share with Friend</string>
    <string name="menu6">My Wallet</string>
    <string name="label_3">Wallet</string>
    <string name="string_label_4">Notification</string>
    <string name="label_5">Setting</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transections">Transaction</string>
    <!-- Strings used for fragments for navigation -->

    <string name="update">Update</string>
    <string name="list_addon">List Addon</string>
    <string name="list_addonextra">Extra Addon</string>
    <string name="select_service">Your Service</string>
    <string name="order_details">Order Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="introtext1">We have great and fast services for you. \nChoose service you want to need.</string>
    <string name="privacy">Privacy Policy</string>
    <string name="deletemesseg">Are you sure you want to cancel</string>
    <string name="cancel">Cancel</string>
    <string name="contect">Contact</string>
    <string name="track">Order Status</string>
    <string name="title1">Congratulations !!! \n Your order has been successfully placed.</string>
    <string name="title2">Please check the delivery status at My Booking page</string>
    <string name="info">Info</string>
    <string name="reschedule">Reschedule</string>
    <string name="wallet">Wallet</string>
    <string name="usertitle">Word on the street</string>
    <string name="usersubtitle">Testimonials</string>
    <string name="selectone">Select One..</string>
    <string name="yes">Yes</string>
    <string name="noa">No</string>
    <string name="qty">Qty</string>
    <string name="youraacountsave"> Your Save Amount </string>
    <string name="directhire">Direct Hire Experts</string>
    <string name="r1">Friends get</string>
    <string name="r2">on their first complete order</string>
    <string name="wall">on your wallet</string>
    <string name="r3">You get</string>
    <string name="textcoyu">Text Copy</string>
    <string name="viewallservice">View All Service</string>
    <string name="myprofile">My Profile</string>
    <string name="totalamount">Total Amount :</string>
    <string name="viewall">View All</string>
    <string name="wehave">We have sent you an SMS on </string>
    <string name="withdigit"> with 6 digit verification code</string>
    <string name="secoundwait"> Seconds Wait</string>
    <string name="mywallet">My Wallet</string>
    <string name="youcantadd">You cant add more of this item</string>
    <string name="popular_add_ons">Popular Add-ons</string>
    <string name="my_address">My Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="productnotfound">Product Not Found</string>
    <string name="time_slot">Time Slot</string>
    <string name="subtotal">SubTotal</string>
    <string name="addon">Addon</string>
    <string name="total">Total</string>
    <string name="shipping_address">Shipping address</string>
    <string name="payment">Payment</string>
    <string name="item_total">Item total</string>
    <string name="add_ons">Add-ons</string>
    <string name="enternewpassword">Enter New Password?</string>
    <string name="enterpassword">Enter Password</string>
    <string name="confirmpassword">confirm password</string>
    <string name="bio">Bio</string>
    <string name="enteryourphone">Enter your Phone Number</string>
    <string name="verification">We will send you the 6 digit verification code</string>
    <string name="countrycode">Country Code</string>
    <string name="mobileno">Mobile No</string>
    <string name="grnretotp">Generate OTP</string>
    <string name="need_nsomeone">Need \nsomeone to \nServe you?</string>
    <string name="what_service_are_you">What service are you \nlooking for ?</string>
    <string name="choose_best_recommendation_from">Choose Best Recommendation from your near by !</string>
    <string name="house_no">House No / Flat / Block Number</string>
    <string name="landmark">Landmark</string>
    <string name="save_as">Save As</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="didnot">Did not receive the code?</string>
    <string name="sharecont">Share your Referral code via social media and earn more then from your expectation.</string>
    <string name="copy">Copy</string>
    <string name="invitefriendnow">Invite friends now</string>
    <string name="search_for_product">Search For Product...</string>
    <string name="logout">Logout</string>
    <string name="service_information">Selected Service provider information</string>
    <string name="order_id">Order ID :</string>
    <string name="select_payment">Select Payment Method</string>
    <string name="hi11">More then 2k Trusted Pros in The Community,\nGet the trusted one to server you</string>
    <string name="hi2">Millions of professionals !</string>
    <string name="hi22">Worldwide to deliver services at home like never experienced before</string>
    <string name="add">Add +</string>

    <string name="menu5">Refer &amp; Earn</string>
    <string name="trams">Terms &amp; Condition</string>
    <string name="referearn"><![CDATA[Refer & Earn]]></string>
    <string name="hi1"><![CDATA[Certified & Trusted Pros!]]></string>
    <string name="langu">Language</string>


</resources>