<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.BookingDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/order_summary"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_orderid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:text="0001" />

                    <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_status"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="Pandding"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:text="@string/time_slot" />

                    <TextView
                        android:id="@+id/txt_data"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:padding="8dp"
                        android:text="22-22-2020"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:text="@string/subtotal" />

                    <TextView
                        android:id="@+id/txt_subtotal"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:padding="8dp"
                        android:text="10"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:text="@string/addon" />

                    <TextView
                        android:id="@+id/txt_addon"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:padding="8dp"
                        android:text="10"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lvl_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:text="@string/wallet" />

                    <TextView
                        android:id="@+id/txt_wallet"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:padding="8dp"
                        android:text=""
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:text="@string/total" />

                    <TextView
                        android:id="@+id/txt_total"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:padding="8dp"
                        android:text="10"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/order_details"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="2dp"
                        android:text="@string/shipping_address"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:padding="2dp"
                        android:text="@string/payment"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txt_paymentmethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Service provider information"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_export"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:padding="2dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_pname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:padding="2dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txt_pmobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:padding="2dp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:padding="10dp"
                    android:text="@string/select_service"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleview_service"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:scrollbars="none" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_addon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/list_addon"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/lvl_addon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_extra_addon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/list_addonextra"
                    android:textColor="@color/black" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_round"
                        android:drawablePadding="10dp" />

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="right"
                        android:text="sd"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_proceed"
                        android:layout_width="150dp"
                        android:layout_height="42dp"
                        android:background="@drawable/rounded_button"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/proceed_to_pay"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>