<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".activity.WalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/ic_card_wallet"
                android:gravity="center|left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="$50120.12"
                    android:textColor="@color/white"
                    android:textSize="21dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_inc"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txt_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$5012"
                        android:textColor="@color/white"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_exp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txt_expence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$1000"
                        android:textColor="@color/white"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/transections"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_trazection"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>